--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "progressive",
   "version": "1.0.0",
-  "description": "Project for my Progressive Web Apps course on Lynda.com/LinkedIn Learning",
+  "description": "Progressive Web App Lunarline",
   "scripts": {
     "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/planetoftheweb/progressive.git"
+    "url": "https://github.com/jrohatiner/progressive.git"
   },
-  "author": "Ray Villalobos",
+  "author": "Judith Rohatiner",
   "devDependencies": {
     "browserify": "^13.1.0",
     "gulp": "^3.8.8",
